--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
